# telepay-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  conventional-label.yaml  publish.yml
telepay/: __init__.py
telepay/v1/: __init__.py  auth.py  errors.py  http_clients.py  utils.py  webhooks.py
telepay/v1/_async/: client.py
telepay/v1/_sync/: client.py
telepay/v1/models/: account.py  assets.py  balance.py  info.py  invoice.py  transfer.py  wallets.py  webhooks.py  withdraw.py
tests/: test_telepay.py
tests/v1/: utils.py
tests/v1/_async/: test_client.py
tests/v1/_sync/: test_client.py
