[tool.poetry]
name = "telepay"
version = "0.0.6"
description = "Python SDK for the TelePay API"
authors = ["Carlos Lugones <contact@lugodev.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/TelePay-cash/telepay-python"
repository = "https://github.com/TelePay-cash/telepay-python"
keywords = ["payments", "gateway", "cryptocurrencies", "TON"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Natural Language :: English"
]
include = [
    "LICENSE",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/TelePay-cash/telepay-python/issues"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.22.0"
python-dotenv = "^0.20.0"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
anyio = {extras = ["trio"], version = "^3.3.4"}
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.18.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
